--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "audrev_ui",
   "version": "0.1.0",
   "engines":{
-    "node":"18.0.0"
+    "node":"18.x"
   },
   "private": true,
   "dependencies": {
