--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "audrev_ui",
   "version": "0.1.0",
   "engines":{
-    "node":"18.x"
+    "node":"18.x",
+    "npm": "6.x"
   },
   "private": true,
   "dependencies": {
