--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "audrev_ui",
   "version": "0.1.0",
-  "engines":{
-    "node":"18.x",
+  "engines": {
+    "node": "18.x",
     "npm": "6.x"
   },
   "private": true,
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "d3": "^7.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -18,7 +19,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start .env",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
